Implemented and tested import resolution